--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 
+
+
 body{
     background-color: rgb(200, 57, 57);
     
@@ -28,17 +30,37 @@ header h2{
     padding:10px;
     
 }
-li{
-    list-style: none;
-}
 
-ul{
+
+nav ul, li {
+    color: rgb(255, 255, 255);
     text-transform: uppercase;
-    list-style-type:none;
+    list-style: none;
+    text-decoration: none;
     display:block;
-    display: grid;
-
+    transition: all ease 0.5s;
+    max-width: 1200px;
+    padding: 5px 50px;
+    margin:auto;
+    font-family: sans-serif;
+    display: flex;
+    text-align:center;
 }
+nav a{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    display:block;
+}
+
+nav ul li{
+    background-color: rgb(92, 100, 133);
+    padding: 5px 50px;
+}
+
+.changeco{
+    background-color: rgb(121, 145, 128);
+}
+
 
 p{
     font-size: 20px;
@@ -47,8 +69,4 @@ p{
 span{
     color: rgb(234, 255, 0);
     font-size: large;
-}
-
-div{
-
 }
