--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 header{
-    
+    max-width: 2700px;
     background-image: linear-gradient(rgb(218, 191, 20), rgb(160, 31, 67));
     background-repeat:no-repeat;
     background-color: rgb(161, 29, 66);
@@ -78,13 +78,17 @@ img{
     border-color: rgb(165, 136, 42);
     margin:auto;
     float:left;
-    max-width: 1300px;
-    max-height: 1000px;
+    max-width: 1000px;
+    max-height: 900px;
 }
 
 .top-right{
     margin:auto;
     position: right;
+    text-align: center;
+    font-size: 50px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    text-decoration: double;
 }
 
 footer{
@@ -93,5 +97,12 @@ footer{
     bottom: 0;
      width: 100%;
      height: 3 rem;          /* Footer height */
-    background-color: rgb(32, 34, 31);
+    background-color: rgb(253, 173, 11);
+}
+p{
+    font-family:fantasy;
+    font-size: 45px;
+    margin:auto;
+    padding:10px;
+    
 }
