--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 
 body{
-    background-color: rgb(200, 57, 57);
+    background-color: rgb(200, 57, 57); /* rgb(200, 57, 57) */
     max-width: 2700px;
 }
 
@@ -11,6 +11,7 @@ header{
     background-image: linear-gradient(rgb(218, 191, 20), rgb(160, 31, 67));
     background-repeat:no-repeat;
     background-color: rgb(161, 29, 66);
+    
 }
 
  header h1, header h2{
@@ -104,5 +105,10 @@ p{
     font-size: 45px;
     margin:auto;
     padding:10px;
+    text-align:center;
     
+}
+
+hr{
+    color:rgb(120, 80, 157);
 }
