--- a/style.css
+++ b/style.css
@@ -5,13 +5,22 @@ html{
     background-color: rgb(200, 57, 57); /* rgb(200, 57, 57) */
     max-width: 2500px;
 }
-
+body{
+    background-color: rgb(27, 27, 27);
+    background-repeat: no-repeat;
+    max-width: 100vw;
+    margin:0;
+    background-size: 2500px;
+    width: 2500px;
+    height: 900px;
+}
 header{
     max-width: 2500px;
     background-image: linear-gradient(rgb(255, 224, 25), rgb(160, 31, 67));
     background-repeat:no-repeat;
     background-color: rgb(161, 29, 66);
     margin: auto;
+    width: 100vw;
     
 }
 
@@ -39,23 +48,30 @@ header h2{
     text-transform: uppercase;
     list-style: none;
     margin:auto;
-   
-   
+    font-family: sans-serif;
+   padding: 6px;
+   transition: all ease 0.5s;
     
 }
 
 nav ul li{
     margin:auto;
     font-size: 20px;
-   
-   
+   padding: 5px 5px;
+   color: white;
 }
 nav a{
     text-decoration: none;
     display:block;
-   
+    color: white;
+    background-color: rgb(121, 145, 128);
+    padding: 5px 5px
 }
-
+nav a:hover{
+    background-color:rgb(98, 105, 104);
+    font-size:large;
+    transition: ease 0.05;
+}
 
 /*
 nav ul, li {
@@ -87,7 +103,7 @@ nav ul li{
 */
 
 .changeco{
-    background-color: rgb(121, 145, 128);
+    background-color: rgb(98, 105, 104);
 }
 
 
@@ -115,13 +131,13 @@ img{
     text-align: center;
     font-size: 50px;
     font-family:Georgia, 'Times New Roman', Times, serif;
-    text-decoration: double;
+    text-decoration: underline;
 }
 
 footer{
     
     position: absolute;
-    bottom: 0;
+    
      width: 100%;
      height: 3 rem;          /* Footer height */
     background-color: rgb(253, 173, 11);
@@ -137,4 +153,9 @@ p{
 
 hr{
     color:rgb(120, 80, 157);
+}
+
+div{
+    background-color: rgb(255, 187, 0);
+    padding: 50px;
 }
