--- a/contact.css
+++ b/contact.css
@@ -71,7 +71,10 @@ nav a{
 
 nav a:hover{
     background-color:rgb(98, 105, 104);
-    font-size:large;
+    
     transition: ease 0.05;
+}
+hr{
+    color:rgb(120, 80, 157);
 }
 
