--- a/Info.css
+++ b/Info.css
@@ -1,18 +1,24 @@
 
 
 
-html{
-    background-color: rgb(200, 57, 57); /* rgb(200, 57, 57) */
-    max-width: 2500px;
+html {
+    background-color: rgb(200, 57, 57);
+    /* rgb(200, 57, 57) */
+    max-width: 3000px;
 }
-body{
+
+body {
     background-color: rgb(27, 27, 27);
-    background-repeat: no-repeat;
     max-width: 100vw;
-    margin:0;
-    background-size: 2500px;
-    width: 2500px;
-    height: 900px;
+    margin: 0;
+    /* background-size: 1900px; */
+    /* max-width: 3000px; */
+    display: grid;
+    grid-template-rows: 200px 1fr auto;
+    min-height: 100vh;
+    
+
+    
 }
 header{
     max-width: 2500px;
