--- a/style.css
+++ b/style.css
@@ -1,130 +1,202 @@
-
-
-
-html{
-    background-color: rgb(200, 57, 57); /* rgb(200, 57, 57) */
-    max-width: 1900px;
+html {
+    background-color: rgb(200, 57, 57);
+    /* rgb(200, 57, 57) */
+    max-width: 3000px;
 }
-body{
+
+body {
     background-color: rgb(27, 27, 27);
-    background-repeat: no-repeat;
     max-width: 100vw;
-    margin:0;
-    background-size: 1900px;
-    width: 1900px;
-    height: 900px;
-}
-header{
-    max-width: 1900px;
-    background-image: linear-gradient(rgb(255, 224, 25), rgb(160, 31, 67));
-    background-repeat:no-repeat;
-    background-color: rgb(161, 29, 66);
-    margin: auto;
-    width: 100vw;
+    margin: 0;
+    /* background-size: 1900px; */
+    /* max-width: 3000px; */
+    display: grid;
+    grid-template-rows: 200px 1fr auto;
+    min-height: 100vh;
     
 }
 
- header h1, header h2{
+
+
+header {
+    /* max-width: 3000px; */
+    background-image: linear-gradient(rgb(255, 224, 25), rgb(160, 31, 67));
+    background-color: rgb(161, 29, 66);
+    margin: auto;
+    width: 100%;
+    height:100%;
+}
+
+header h1,
+header h2 {
     margin: auto;
     text-align: center;
     font-family: 'Bungee Spice', sans-serif;
 }
 
-header h2{
+header h2 {
     font-size: 50px;
     text-decoration: underline;
-    background-color: rgb(106, 33, 33); /*rgb(106, 33, 33);  is the red color you want */
+    background-color: rgb(106, 33, 33);
+    /*rgb(106, 33, 33);  is the red color you want */
     border-style: dotted;
     border-color: white;
-    color:rgb(255, 234, 4);
+    color: rgb(255, 234, 4);
     max-width: 700px;
-    padding:10px;
-    
+    padding: 10px;
 }
-
- nav ul
-{
-    display:flex;
+nav ul {
+    display: flex;
     text-transform: uppercase;
     list-style: none;
-    margin:auto;
+    margin: auto;
     font-family: sans-serif;
-   padding: 6px;
-   transition: all ease 0.5s;
-    
+    padding: 6px;
+    transition: all ease 0.5s;
+   
+
 }
 
-nav ul li{
-    margin:auto;
+nav ul li {
+    margin: auto;
     font-size: 20px;
     background-color: rgb(121, 145, 128);
-   color: white;
-   
-}
-nav a{
-    text-decoration: none;
-    display:block;
     color: white;
-    
+
+}
+
+nav a {
+    text-decoration: none;
+    display: block;
+    color: white;
+
     padding: 5px 5px;
 }
 
-nav a:hover{
-    background-color:rgb(98, 105, 104);
-    
+nav a:hover {
+    background-color: rgb(98, 105, 104);
+
     transition: ease 0.05;
 }
 
 
-p{
+p {
     font-size: 20px;
 }
 
-span{
+span {
     color: rgb(234, 255, 0);
     font-size: large;
 }
 
-img{
-    border-style: solid;
-    border-color: rgb(165, 136, 42);
-    margin:auto;
-    float:left;
-    max-width: 1000px;
-    max-height: 900px;
-}
 
-.top-right{
-    margin:auto;
+.top-right {
+    margin: auto;
     position: right;
     text-align: center;
     font-size: 50px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     text-decoration: underline;
 }
 
-footer{
-    
-    position: absolute;
-    
-     width: 100%;
-     height: 3 rem;          /* Footer height */
+footer {
+
+    /* position: absolute; */
+    /* max-width: 3000px; */
+    width: 100%;
+    height: 3rem;
+    /* Footer height */
     background-color: rgb(253, 173, 11);
 }
-p{
-    font-family:fantasy;
+
+p {
+    font-family: fantasy;
     font-size: 45px;
-    margin:auto;
-    padding:10px;
-    text-align:center;
-    
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+
 }
 
-hr{
-    color:rgb(120, 80, 157);
+hr {
+    color: rgb(120, 80, 157);
+
 }
 
-div{
+div {
     background-color: rgb(255, 187, 0);
     padding: 50px;
+}
+
+main.div.h2{
+    position:fixed;
+    left:1026px;
+}
+/*
+main.div.h2:before{
+    content:".textspin";
+    position: absolute;
+    animation-name: wave;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+}
+
+@keyframes wave {
+0% {
+    transform: rotate(0);
+}
+25% {
+    transform: rotate(45deg);
+  }
+  75% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(-45deg);
+  }
+}
+*/
+
+.textSpin{
+   position:relative;
+   left:780px;
+}
+
+.textSpin:before {
+    content:'👉';
+    position: absolute;
+  animation-name: wave;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate-reverse;
+  
+}
+
+@keyframes wave {
+  0% {
+    transform: rotate(0);
+  }
+  5%{
+    left:10px;
+  }
+  10%{
+    left:200px;
+  }
+  25% {
+    transform: rotate(25deg);
+    font-size: 30px;
+    left:50px;
+  }
+  75% {
+    transform: rotate(0);
+    font-size: 100px;
+    left:50px;
+  }
+  100% {
+    transform: rotate(-45deg);
+    font-size: 200px;
+    left:10px;
+  }
+
 }
