--- a/style.css
+++ b/style.css
@@ -1,17 +1,19 @@
-html {
-    background-color: rgb(200, 57, 57);
+    
+    html {
+    background-color:rgb(206, 138, 138);;
+    /* background-color: rgb(200, 57, 57); */
     /* rgb(200, 57, 57) */
     max-width: 3000px;
 }
 
 body {
-    background-color: rgb(27, 27, 27);
+    background-color: rgb(69, 21, 21);;
     max-width: 100vw;
     margin: 0;
     /* background-size: 1900px; */
     /* max-width: 3000px; */
     display: grid;
-    grid-template-rows: 200px 1fr auto;
+    grid-template-rows: 130px 1fr auto;
     min-height: 100vh;
     
 }
@@ -21,10 +23,10 @@ body {
 header {
     /* max-width: 3000px; */
     background-image: linear-gradient(rgb(255, 224, 25), rgb(160, 31, 67));
-    background-color: rgb(161, 29, 66);
+    /* background-color: rgb(161, 29, 66); */
     margin: auto;
     width: 100%;
-    height:100%;
+  height:100%;
 }
 
 header h1,
@@ -44,6 +46,7 @@ header h2 {
     color: rgb(255, 234, 4);
     max-width: 700px;
     padding: 10px;
+    margin-bottom: 5px;
 }
 nav ul {
     display: flex;
@@ -78,7 +81,10 @@ nav a:hover {
 
     transition: ease 0.05;
 }
-
+nav{
+    background-color: rgb(19, 3, 3);
+    padding: 5px;
+}
 
 p {
     font-size: 20px;
@@ -118,10 +124,6 @@ p {
 
 }
 
-hr {
-    color: rgb(120, 80, 157);
-
-}
 
 div {
     background-color: rgb(255, 187, 0);
@@ -200,3 +202,5 @@ main.div.h2:before{
   }
 
 }
+
+  
