--- a/style.css
+++ b/style.css
@@ -1,32 +1,36 @@
-    
-    html {
-    background-color:rgb(206, 138, 138);;
+@media (min-width: 501px) {
+    /* PC/desktop */
+    /* 
+
+html {
+    background-color: rgb(206, 138, 138);
+    ;
     /* background-color: rgb(200, 57, 57); */
     /* rgb(200, 57, 57) */
-    max-width: 3000px;
-}
+    /*   max-width: 3000px;
+    /*}
 
 body {
-    background-color: rgb(69, 21, 21);;
+    background-color: rgb(69, 21, 21);
+    ;
     max-width: 100vw;
     margin: 0;
-    /* background-size: 1900px; */
-    /* max-width: 3000px; */
-    display: grid;
+   
+    /*  display: grid;
     grid-template-rows: 130px 1fr auto;
     min-height: 100vh;
-    
+
 }
 
 
 
 header {
     /* max-width: 3000px; */
-    background-image: linear-gradient(rgb(255, 224, 25), rgb(160, 31, 67));
+    /*   background-image: linear-gradient(rgb(255, 224, 25), rgb(160, 31, 67));
     /* background-color: rgb(161, 29, 66); */
-    margin: auto;
+    /*  margin: auto;
     width: 100%;
-  height:100%;
+    height: 100%;
 }
 
 header h1,
@@ -41,13 +45,14 @@ header h2 {
     text-decoration: underline;
     background-color: rgb(106, 33, 33);
     /*rgb(106, 33, 33);  is the red color you want */
-    border-style: dotted;
+    /*  border-style: dotted;
     border-color: white;
     color: rgb(255, 234, 4);
     max-width: 700px;
     padding: 10px;
     margin-bottom: 5px;
 }
+
 nav ul {
     display: flex;
     text-transform: uppercase;
@@ -56,7 +61,7 @@ nav ul {
     font-family: sans-serif;
     padding: 6px;
     transition: all ease 0.5s;
-   
+
 
 }
 
@@ -76,12 +81,13 @@ nav a {
     padding: 5px 5px;
 }
 
-nav a:hover {
+nav~ul a:hover {
     background-color: rgb(98, 105, 104);
 
     transition: ease 0.05;
 }
-nav{
+
+nav {
     background-color: rgb(19, 3, 3);
     padding: 5px;
 }
@@ -109,10 +115,10 @@ footer {
 
     /* position: absolute; */
     /* max-width: 3000px; */
-    width: 100%;
+    /*  width: 100%;
     height: 3rem;
     /* Footer height */
-    background-color: rgb(253, 173, 11);
+    /*    background-color: rgb(253, 173, 11);
 }
 
 p {
@@ -126,14 +132,11 @@ p {
 
 
 div {
-    background-color: rgb(255, 187, 0);
+    background-color: rgb(255, 170, 0);
     padding: 50px;
 }
 
-main.div.h2{
-    position:fixed;
-    left:1026px;
-}
+
 /*
 main.div.h2:before{
     content:".textspin";
@@ -160,47 +163,152 @@ main.div.h2:before{
 }
 */
 
-.textSpin{
-   position:relative;
-   left:780px;
+    /*.textSpin {
+    position: relative;
+    left: 780px;
 }
 
 .textSpin:before {
-    content:'👉';
+    content: '👉';
     position: absolute;
-  animation-name: wave;
-  animation-duration: 1.5s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate-reverse;
-  
+    animation-name: wave;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+
 }
 
 @keyframes wave {
-  0% {
-    transform: rotate(0);
-  }
-  5%{
-    left:10px;
-  }
-  10%{
-    left:50px;
-  }
-  25% {
-    transform: rotate(25deg);
-    font-size: 30px;
-    left:50px;
-  }
-  75% {
-    transform: rotate(0);
-    font-size: 100px;
-    left:50px;
-  }
-  100% {
-    transform: rotate(-45deg);
-    font-size: 200px;
-    left:10px;
-  }
+    0% {
+        transform: rotate(0);
+    }
+
+    5% {
+        left: 10px;
+    }
+
+    10% {
+        left: 50px;
+    }
+
+    25% {
+        transform: rotate(25deg);
+        font-size: 30px;
+        left: 50px;
+    }
+
+    75% {
+        transform: rotate(0);
+        font-size: 100px;
+        left: 50px;
+    }
+
+    100% {
+        transform: rotate(-45deg);
+        font-size: 200px;
+        left: 10px;
+    }
 
 }
+*/
+}
 
-  
+
+
+@media (max-width: 500px) {
+    /* Mobile */
+
+    body {
+        display: grid;
+        grid-template-rows: 135px 1fr auto;
+        min-height: 100vh;
+        width: 100%;
+        background-color: rgb(255, 255, 255);
+        margin: auto;
+    }
+
+
+    header {
+        background-image: linear-gradient(rgb(237, 214, 99), rgb(160, 31, 67));
+        margin: auto;
+        width: 100%;
+        height: 100%;
+    }
+
+    header h1,
+    header h2 {
+        margin: auto;
+        text-align: center;
+        font-family: 'Bungee Spice', sans-serif;
+    }
+
+    header h1{
+        font-size: 27px;
+    }
+    header h2 {
+        font-size: 32px;
+        text-decoration: underline;
+        background-color: rgb(106, 33, 33);
+        border-style: dotted;
+        border-color: white;
+        color: rgb(255, 234, 4);
+        max-width: 700px;
+        padding: 10px;
+        margin-bottom: 5px;
+    }
+    
+    
+    nav ul {
+        display: flex;
+        text-align: center;
+        font-family: sans-serif;
+        text-transform: uppercase;
+        font-size: 15px;
+        padding: 2px;
+        float: right;
+        list-style: none;
+       
+       
+    }
+
+    nav ul li {
+        display: flex;
+        text-align: center;
+        list-style: none;
+        padding-left: 25px;
+        
+        
+    }
+
+
+    
+nav a {
+    text-decoration: none;
+    display: block;
+    color: white;
+   
+}
+
+nav{
+        background-color: rgb(19, 3, 3);
+    }
+
+nav ul a:hover, a:focus {
+    color: rgb(98, 105, 104);
+
+    transition: ease 0.05;
+}
+
+.center{
+    margin-top: 40px;
+    text-align: center;
+    background-color: rgb(112, 52, 44);
+    padding: 10px;
+}
+
+
+
+
+
+
+}
