--- a/style.css
+++ b/style.css
@@ -1,217 +1,3 @@
-@media (min-width: 501px) {
-    /* PC/desktop */
-    /* 
-
-html {
-    background-color: rgb(206, 138, 138);
-    ;
-    /* background-color: rgb(200, 57, 57); */
-    /* rgb(200, 57, 57) */
-    /*   max-width: 3000px;
-    /*}
-
-body {
-    background-color: rgb(69, 21, 21);
-    ;
-    max-width: 100vw;
-    margin: 0;
-   
-    /*  display: grid;
-    grid-template-rows: 130px 1fr auto;
-    min-height: 100vh;
-
-}
-
-
-
-header {
-    /* max-width: 3000px; */
-    /*   background-image: linear-gradient(rgb(255, 224, 25), rgb(160, 31, 67));
-    /* background-color: rgb(161, 29, 66); */
-    /*  margin: auto;
-    width: 100%;
-    height: 100%;
-}
-
-header h1,
-header h2 {
-    margin: auto;
-    text-align: center;
-    font-family: 'Bungee Spice', sans-serif;
-}
-
-header h2 {
-    font-size: 50px;
-    text-decoration: underline;
-    background-color: rgb(106, 33, 33);
-    /*rgb(106, 33, 33);  is the red color you want */
-    /*  border-style: dotted;
-    border-color: white;
-    color: rgb(255, 234, 4);
-    max-width: 700px;
-    padding: 10px;
-    margin-bottom: 5px;
-}
-
-nav ul {
-    display: flex;
-    text-transform: uppercase;
-    list-style: none;
-    margin: auto;
-    font-family: sans-serif;
-    padding: 6px;
-    transition: all ease 0.5s;
-
-
-}
-
-nav ul li {
-    margin: auto;
-    font-size: 20px;
-    background-color: rgb(121, 145, 128);
-    color: white;
-
-}
-
-nav a {
-    text-decoration: none;
-    display: block;
-    color: white;
-
-    padding: 5px 5px;
-}
-
-nav~ul a:hover {
-    background-color: rgb(98, 105, 104);
-
-    transition: ease 0.05;
-}
-
-nav {
-    background-color: rgb(19, 3, 3);
-    padding: 5px;
-}
-
-p {
-    font-size: 20px;
-}
-
-span {
-    color: rgb(234, 255, 0);
-    font-size: large;
-}
-
-
-.top-right {
-    margin: auto;
-    position: right;
-    text-align: center;
-    font-size: 50px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-decoration: underline;
-}
-
-footer {
-
-    /* position: absolute; */
-    /* max-width: 3000px; */
-    /*  width: 100%;
-    height: 3rem;
-    /* Footer height */
-    /*    background-color: rgb(253, 173, 11);
-}
-
-p {
-    font-family: fantasy;
-    font-size: 45px;
-    margin: auto;
-    padding: 10px;
-    text-align: center;
-
-}
-
-
-div {
-    background-color: rgb(255, 170, 0);
-    padding: 50px;
-}
-
-
-/*
-main.div.h2:before{
-    content:".textspin";
-    position: absolute;
-    animation-name: wave;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate-reverse;
-}
-
-@keyframes wave {
-0% {
-    transform: rotate(0);
-}
-25% {
-    transform: rotate(45deg);
-  }
-  75% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(-45deg);
-  }
-}
-*/
-
-    /*.textSpin {
-    position: relative;
-    left: 780px;
-}
-
-.textSpin:before {
-    content: '👉';
-    position: absolute;
-    animation-name: wave;
-    animation-duration: 1.5s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate-reverse;
-
-}
-
-@keyframes wave {
-    0% {
-        transform: rotate(0);
-    }
-
-    5% {
-        left: 10px;
-    }
-
-    10% {
-        left: 50px;
-    }
-
-    25% {
-        transform: rotate(25deg);
-        font-size: 30px;
-        left: 50px;
-    }
-
-    75% {
-        transform: rotate(0);
-        font-size: 100px;
-        left: 50px;
-    }
-
-    100% {
-        transform: rotate(-45deg);
-        font-size: 200px;
-        left: 10px;
-    }
-
-}
-*/
-}
 
 
 
@@ -223,7 +9,7 @@ main.div.h2:before{
         grid-template-rows: 135px 1fr auto;
         min-height: 100vh;
         width: 100%;
-        background-color: rgb(142, 61, 61);
+        background-color: rgb(73, 111, 73);
         margin: auto;
     }
 
@@ -233,31 +19,34 @@ main.div.h2:before{
         margin: auto;
         width: 100%;
         height: 100%;
-        border-bottom:  thick double #32a1ce;;
+        border-bottom:  thick double #000000;;
+        display: block;
+        
     }
 
-    header h1,
-    header h2 {
+    header h1{
         margin: auto;
         text-align: center;
         font-family: 'Bungee Spice', sans-serif;
+        margin-bottom: -27px;
     }
 
     header h1{
         font-size: 27px;
     }
     header h2 {
-        font-size: 32px;
-        text-decoration: underline;
-        background-color: rgb(106, 33, 33);
+        font-size:31px;
+        background-color: rgb(255, 255, 255);
         border-style:groove;
         border-left: none;
         border-right: none;
         border-color: white;
-        color: rgb(255, 234, 4);
-        max-width: 700px;
+        color: rgb(255, 205, 5);
+        max-width: 100vw;
         padding: 10px;
         margin-bottom: 5px;
+        text-align: center;
+        font-family: "Kdam Thmor Pro", sans-serif;
     }
     
     
@@ -305,11 +94,11 @@ nav ul a:hover, a:focus {
 .center{
     margin-top: 40px;
     text-align: center;
-    background-color: rgb(255, 216, 60);
+    background-image:linear-gradient(rgb(73, 111, 73), rgb(255, 216, 60));
     padding: 10px;   
 }
 .top-right{
-    color: rgb(78, 24, 24);
+    color: rgb(0, 0, 0);
     text-decoration: underline;
     margin-bottom:-20px;
 }
@@ -321,5 +110,238 @@ main div p{
 .color{
     color:rgb(46, 22, 22);
     font-size: 17px;
+}
+
+footer{
+    background-color: rgb(160, 31, 31);
+}
+
+.foot-list{
+    
+    font-family: sans-serif;
+        text-transform: uppercase;
+        font-size: 15px;
+        color:white;
+}
+
+footer ul, li{
+    list-style: none;
+    display: flex;
+    color: rgb(255, 255, 255);
+   
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;list-style: none;
+    text-decoration: none;
+}
+footer a{
+    list-style: none;
+    text-decoration: none;
+    list-style-type: none;
+    color: white;
+    padding-right:30px;
+}
+
+.past-center{
+    text-align: center;
+    color:rgb(255, 255, 255);
+    padding-bottom:20px;
+   
+}
+
+.textSpin{
+    background-size: contain;
+    min-height: 320px;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin: auto;
+    display: block;
+}
+footer img{
+    width:30px;
+    
+    float: left;
+    padding-left: 50px;
+    
+}
+footer p{
+    float: right;
+    padding-right: 50px;
+}
+}
+
+
+
+
+
+
+@media (min-width: 501px) {
+/* PC or desktops */
+    body {
+        display: grid;
+        grid-template-rows: 160px 1fr auto;
+        min-height: 100vh;
+        width: 100%;
+        background-color: rgb(73, 111, 73);
+        margin: auto;
+    }
+
+
+    header {
+        background-image: linear-gradient(rgb(237, 214, 99), rgb(160, 31, 67));
+        margin: auto;
+        width: 100%;
+        height: 100%;
+        border-bottom:  thick double #000000;;
+        display: block;
+        
+    }
+
+    header h1{
+        margin: auto;
+        text-align: center;
+        font-family: 'Bungee Spice', sans-serif;
+        margin-bottom: -30px;
+    }
+
+    header h1{
+        font-size: 27px;
+    }
+    header h2 {
+        font-size: 45px;
+        background-color: rgb(255, 255, 255);
+        border-style:groove;
+        border-left: none;
+        border-right: none;
+        border-color: white;
+        color: rgb(255, 205, 5);
+        max-width: 100vw;
+        padding: 10px;
+        margin-bottom: 5px;
+        text-align: center;
+        font-family: "Kdam Thmor Pro", sans-serif;
+    }
+    
+    
+    nav ul {
+        display: flex;
+        text-align: center;
+        font-family: sans-serif;
+        text-transform: uppercase;
+        font-size: 15px;
+        padding: 2px;
+        float: right;
+        list-style: none;
+       
+       
+    }
+
+    nav ul li {
+        display: flex;
+        text-align: center;
+        list-style: none;
+        padding-left: 25px;
+        
+        
+    }
+
+
+    
+nav a {
+    text-decoration: none;
+    display: block;
+    color: white;
+   
+}
+
+nav{
+        background-color: rgb(19, 3, 3);
+    }
+
+nav ul a:hover, a:focus {
+    color: rgb(144, 155, 153);
+
+    transition: ease 0.05;
+}
+
+.center{
+    margin-top: 40px;
+    text-align: center;
+    background-image:linear-gradient(rgb(73, 111, 73), rgb(255, 216, 60));
+    padding: 10px;   
+}
+.top-right{
+    color: rgb(0, 0, 0);
+    text-decoration: underline;
+    margin-bottom:-20px;
+    font-size: 40px;
+}
+
+main div p{
+    font-size: 23px;
+}
+
+.color{
+    color:rgb(46, 22, 22);
+    font-size: 17px;
+}
+
+footer{
+    background-color: rgb(160, 31, 31);
+}
+
+.foot-list{
+    
+    font-family: sans-serif;
+        text-transform: uppercase;
+        font-size: 15px;
+        color:white;
+}
+
+footer ul, li{
+    list-style: none;
+    display: flex;
+    color: rgb(255, 255, 255);
+   
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;list-style: none;
+    text-decoration: none;
+}
+footer a{
+    list-style: none;
+    text-decoration: none;
+    list-style-type: none;
+    color: white;
+    padding-right:30px;
+}
+
+.past-center{
+    text-align: center;
+    color:rgb(255, 255, 255);
+    padding-bottom:20px;
+   
+}
+
+.textSpin{
+    background-size: contain;
+    min-height: 320px;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin: auto;
+    display: block;
+}
+footer img{
+    width:30px;
+    
+    float: left;
+    padding-left: 50px;
+    
+}
+footer p{
+    float: right;
+    padding-right: 50px;
 }
 }
