--- a/Info.css
+++ b/Info.css
@@ -1,87 +1,91 @@
 
 
 
-html {
-    background-color: rgb(200, 57, 57);
-    /* rgb(200, 57, 57) */
-    max-width: 3000px;
-}
-
 body {
-    background-color: rgb(27, 27, 27);
-    max-width: 100vw;
-    margin: 0;
-    /* background-size: 1900px; */
-    /* max-width: 3000px; */
     display: grid;
-    grid-template-rows: 200px 1fr auto;
+    grid-template-rows: 160px 1fr auto;
     min-height: 100vh;
-    
-
-    
-}
-header{
-    max-width: 2500px;
-    background-image: linear-gradient(rgb(255, 224, 25), rgb(160, 31, 67));
-    background-repeat:no-repeat;
-    background-color: rgb(161, 29, 66);
+    width: 100%;
+    background-color: rgb(73, 111, 73);
     margin: auto;
-    width: 100vw;
+}
+
+
+header {
+    background-image: linear-gradient(rgb(237, 214, 99), rgb(109, 7, 36));
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    border-bottom:  thick double #000000;;
+    display: block;
     
 }
 
- header h1, header h2{
+header h1{
     margin: auto;
     text-align: center;
     font-family: 'Bungee Spice', sans-serif;
+    margin-bottom: -30px;
 }
 
-header h2{
-    font-size: 50px;
-    text-decoration: underline;
-    background-color: rgb(106, 33, 33); /*rgb(106, 33, 33);  is the red color you want */
-    border-style: dotted;
+header h1{
+    font-size: 27px;
+}
+header h2 {
+    font-size: 45px;
+    background-color: rgb(255, 255, 255);
+    border-style:groove;
+    border-left: none;
+    border-right: none;
     border-color: white;
-    color:rgb(255, 234, 4);
-    max-width: 700px;
-    padding:10px;
-    
+    color: rgb(255, 205, 5);
+    max-width: 100vw;
+    padding: 10px;
+    margin-bottom: -10px;
+    text-align: center;
+    font-family: "Kdam Thmor Pro", sans-serif;
 }
 
- nav ul
-{
-    display:flex;
-    text-transform: uppercase;
-    list-style: none;
-    margin:auto;
+
+nav ul {
+    display: flex;
+    text-align: center;
     font-family: sans-serif;
-   padding: 6px;
-   transition: all ease 0.5s;
-    
-}
-
-nav ul li{
-    margin:auto;
-    font-size: 20px;
-    background-color: rgb(121, 145, 128);
-   color: white;
+    text-transform: uppercase;
+    font-size: 15px;
+    padding: 2px;
+    float: right;
+    list-style: none;
+   padding-top:-27px;
    
 }
-nav a{
-    text-decoration: none;
-    display:block;
-    color: white;
+
+nav ul li {
+    display: flex;
+    text-align: center;
+    list-style: none;
+    padding-left: 25px;
     
-    padding: 5px 5px;
+    
 }
 
-nav a:hover{
-    background-color:rgb(98, 105, 104);
-    
-    transition: ease 0.05;
+
+
+nav a {
+text-decoration: none;
+display: block;
+color: white;
+
 }
-hr{
-    color:rgb(120, 80, 157);
+
+nav{
+    background-color: rgb(19, 3, 3);
+}
+
+nav ul a:hover, a:focus {
+color: rgb(39, 53, 50);
+
+transition: ease 0.05;
 }
 
 .centerh{
@@ -89,14 +93,63 @@ hr{
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 32px;
-    background-color: rgb(170, 189, 204);
+    background-color: rgb(255, 218, 54);
     padding: 20px;
     text-decoration: underline;
+    
 }
 p{
     margin:auto;
     text-align: center;
     font-size:29px;
     padding:10px;
-    background-color: rgb(207, 186, 186);
+    background-color: rgb(222, 222, 222);
+}
+footer{
+    background-color: rgb(160, 31, 31);
+}
+
+.foot-list{
+    
+    font-family: sans-serif;
+        text-transform: uppercase;
+        font-size: 15px;
+        color:white;
+}
+
+footer ul, li{
+    list-style: none;
+    display: flex;
+    color: rgb(255, 255, 255);
+   
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;list-style: none;
+    text-decoration: none;
+}
+footer a{
+    list-style: none;
+    text-decoration: none;
+    list-style-type: none;
+    color: white;
+    padding-right:30px;
+}
+
+.past-center{
+    text-align: center;
+    color:rgb(255, 255, 255);
+    padding-bottom:20px;
+   
+}
+
+footer img{
+    width:30px;
+    
+    float: left;
+    padding-left: 50px;
+    
+}
+footer p{
+    float: right;
+    padding-right: 50px;
 }
