--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 
 
     header {
-        background-image: linear-gradient(rgb(237, 214, 99), rgb(160, 31, 67));
+        background-image: linear-gradient(rgb(237, 214, 99), rgb(109, 7, 36));
         margin: auto;
         width: 100%;
         height: 100%;
@@ -189,7 +189,7 @@ footer p{
 
 
     header {
-        background-image: linear-gradient(rgb(237, 214, 99), rgb(160, 31, 67));
+        background-image: linear-gradient(rgb(237, 214, 99), rgb(109, 7, 36));
         margin: auto;
         width: 100%;
         height: 100%;
@@ -218,7 +218,7 @@ footer p{
         color: rgb(255, 205, 5);
         max-width: 100vw;
         padding: 10px;
-        margin-bottom: 5px;
+        margin-bottom: -10px;
         text-align: center;
         font-family: "Kdam Thmor Pro", sans-serif;
     }
@@ -233,7 +233,7 @@ footer p{
         padding: 2px;
         float: right;
         list-style: none;
-       
+       padding-top:-27px;
        
     }
 
@@ -260,7 +260,7 @@ nav{
     }
 
 nav ul a:hover, a:focus {
-    color: rgb(144, 155, 153);
+    color: rgb(39, 53, 50);
 
     transition: ease 0.05;
 }
@@ -330,8 +330,11 @@ footer a{
     text-align: center;
     font-size: 30px;
     padding-top: 10px;
-    margin: auto;
+    /* margin: auto; */
     display: block;
+    margin:0;
+    margin-bottom: -50px;
+    height:800px;
 }
 footer img{
     width:30px;
