--- a/contact.css
+++ b/contact.css
@@ -156,12 +156,13 @@ padding-right: 50px;
 }
 h1{
     text-align: center;
+    margin: auto;
 }
 .formForm{
    
     display: grid;
     font-size: 20px;
-    width: 800px;
+    max-width: 800px; 
     text-align: center;
     padding-bottom: 50px;
     margin: auto;
@@ -171,8 +172,8 @@ input{
     font-size: 20px;
 }
 img{
-    text-align: center;
+    margin: auto;
     display: grid;
-    width:100vw;
-    float: right;
+    width: 100%;
+    height: auto;
 }
