--- a/style.css
+++ b/style.css
@@ -361,8 +361,9 @@ footer p {
 main img{
     display: block;
     margin: auto;
-    width: auto;
+    width: 100%;
     height: auto;
+    
 }
 
 }
