--- a/competitions.css
+++ b/competitions.css
@@ -1,6 +1,11 @@
-body {
+
+
+@media (max-width: 500px) {
+    /* Mobile */
+
+body { /* structure format */
     display: grid;
-    grid-template-rows: 150px 1fr auto;
+    grid-template-rows: 160px 1fr auto;
     min-height: 100vh;
     width: 100%;
     background-color: rgb(73, 111, 73);
@@ -132,10 +137,157 @@ footer p {
     padding-right: 50px;
 }
 main img{
+    max-width: 300px;
     display: block;
     margin: auto;
+}
+}
+
+
+
+
+
+
+/* PC */
+@media (min-width: 501px) {
+body { /* structure format */
+    display: grid;
+    grid-template-rows: 160px 1fr auto;
+    min-height: 100vh;
+    width: 100%;
+    background-color: rgb(73, 111, 73);
+    margin: auto;
+}
+
+
+header {
+    background-image: linear-gradient(rgb(237, 214, 99), rgb(109, 7, 36));
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    border-bottom: thick double #000000;
+    ;
+    display: block;
+
+}
+
+header h1 {
+    margin: auto;
+    text-align: center;
+    font-family: 'Bungee Spice', sans-serif;
+    margin-bottom: -27px;
+}
+
+header h1 {
+    font-size: 27px;
+}
+
+header h2 {
+    font-size: 45px;
+    background-color: rgb(255, 255, 255);
+    border-style: groove;
+    border-left: none;
+    border-right: none;
+    border-color: white;
+    color: rgb(255, 205, 5);
     width: 100vw;
-    height: auto;
-    background-size: cover;
-    margin-top: 10px;
+    padding: 10px;
+    margin-bottom: -10px;
+    text-align: center;
+    font-family: "Kdam Thmor Pro", sans-serif;
+}
+
+
+nav ul {
+    display: flex;
+    text-align: center;
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-size: 15px;
+    padding: 2px;
+    float: right;
+    list-style: none;
+    padding-top: -27px;
+
+}
+
+nav ul li {
+    display: flex;
+    text-align: center;
+    list-style: none;
+    padding-left: 25px;
+
+
+}
+
+
+
+
+nav a {
+    text-decoration: none;
+    display: block;
+    color: white;
+
+}
+
+nav {
+    background-color: rgb(19, 3, 3);
+}
+
+nav ul a:hover,
+a:focus {
+    color: rgb(144, 155, 153);
+
+    transition: ease 0.05;
+}
+
+footer {
+    background-color: rgb(160, 31, 31);
+}
+
+.foot-list {
+
+    font-family: sans-serif;
+    text-transform: uppercase;
+    font-size: 15px;
+    color: white;
+}
+
+footer ul,
+li {
+    list-style: none;
+    display: flex;
+    color: rgb(255, 255, 255);
+
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    list-style: none;
+    text-decoration: none;
+}
+
+footer a {
+    list-style: none;
+    text-decoration: none;
+    list-style-type: none;
+    color: white;
+    padding-right: 30px;
+}
+footer img {
+    width: 30px;
+
+    float: left;
+    padding-left: 50px;
+
+}
+
+footer p {
+    float: right;
+    padding-right: 50px;
+}
+main img{
+    max-width: 800px;
+    display: block;
+    margin: auto;
+}
 }
