--- a/contact.css
+++ b/contact.css
@@ -1,36 +1,40 @@
 
 body {/*structure format */
     display: grid;
-    grid-template-rows: 160px 1fr auto;
+    grid-template-rows: 150px 1fr auto;
     min-height: 100vh;
     width: 100%;
     background-color: rgb(73, 111, 73);
     margin: auto;
+}
+*{
+    box-sizing: border-box;
 }
 header {
     background-image: linear-gradient(rgb(237, 214, 99), rgb(109, 7, 36));
     margin: auto;
     width: 100%;
     height: 100%;
-    border-bottom:  thick double #000000;;
+    border-bottom: thick double #000000;
     display: block;
-    
+
 }
 
-header h1{
+header h1 {
     margin: auto;
     text-align: center;
     font-family: 'Bungee Spice', sans-serif;
-    margin-bottom: -30px;
+    margin-bottom: -27px;
 }
 
-header h1{
-    font-size: 27px;
+header h1 {
+    font-size: 25px;
 }
+
 header h2 {
-    font-size: 45px;
+    font-size: 35px;
     background-color: rgb(255, 255, 255);
-    border-style: groove;
+    border-style:groove;
     border-left: none;
     border-right: none;
     border-color: white;
@@ -42,7 +46,6 @@ header h2 {
     font-family: "Kdam Thmor Pro", sans-serif;
 }
 
-
 nav ul {
     display: flex;
     text-align: center;
@@ -52,15 +55,16 @@ nav ul {
     padding: 2px;
     float: right;
     list-style: none;
-    padding-top: -27px;
-
+    margin: auto;
+    padding-top: 20px;
 }
 
 nav ul li {
     display: flex;
     text-align: center;
     list-style: none;
-    padding-left: 25px;
+    margin:auto;
+    padding:9px;
 
 
 }
@@ -68,20 +72,21 @@ nav ul li {
 
 
 nav a {
-text-decoration: none;
-display: block;
-color: white;
+    text-decoration: none;
+    display: block;
+    color: white;
 
 }
 
-nav{
+nav {
     background-color: rgb(19, 3, 3);
 }
 
-nav ul a:hover, a:focus {
-color: rgb(39, 53, 50);
+nav ul a:hover,
+a:focus {
+    color: rgb(144, 155, 153);
 
-transition: ease 0.05;
+    transition: ease 0.05;
 }
 
 .center{
